# lc-plugin-template

./: .gitignore
cpp-template/: CMakeLists.txt
